fix(message): add bottom spacing to toast messages (#1440)

--- a/projects/ng-aquila/src/message/message-toast/message-toast.component.scss
+++ b/projects/ng-aquila/src/message/message-toast/message-toast.component.scss
@@ -3,6 +3,7 @@
 nx-message {
     box-shadow: v(message-box-shadow);
     max-width: 352px;
+    margin-bottom: nx-spacer(s);
 
     @include media-breakpoint-down(small) {
         max-width: calc(100vw - #{nx-spacer(s)});
